Add skills section and fix external link icon for safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,8 @@
 @import "pagination";
 @import "post-page";
 @import "dark-mode-toggle";
+@import "skill";
+@import "external-link";
 
 html {
     scroll-behavior: smooth;
