--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,15 +3,12 @@
 <section class="about" id="about">
     <div class="about-text">
         <h2>About</h2>
-        <p>I had learned to code when I was 11 years old, in Turbo Pascal (yes, the blue
-            screen IDE without syntax highlighting, good times). Right now, you are probably thinking that I was
-            a child prodigy, destined to be a 1337x programmer, but I didn’t really see myself that way. Back
-            then, I hated going to school, just as most of the kids did. I looked for every opportunity not to
-            attend classes. In my elementary school, if you went to competitions, you could miss classes in
-            order to “prepare” for the competitions. Naturally, I went to as many such competitions as I could.
-            Therefore, I would occasionally miss classes to prepare, while, in reality, I would just stay home
-            and play League of Legends. Programming came in handy, as I seemed to be good at it, so my professor
-            started preparing me to attend competitions.</p>
+        <p>I'm a dedicated and driven software engineer currently pursuing a Master's degree in Computer Science at
+            École Polytechnique Fédérale de Lausanne (EPFL), with a passion for crafting robust and innovative software
+            solutions. Leveraging a diverse skill set encompassing C#, Go, Rust, HTML, CSS, JavaScript, and React, I am
+            eager to contribute my technical expertise to exciting projects and further develop my abilities in a
+            dynamic and collaborative environment.</p>
+        {{ partial "skills.html" }}
         <div class="cv-container">
             <a href="pdfs/Andrija_Jelenkovic_CV.pdf" download="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
