Add gap between post title and reading time

--- a/assets/css/posts.css
+++ b/assets/css/posts.css
@@ -47,6 +47,7 @@
 .post-title {
     flex: 0 0 auto;
     display: flex;
+    gap: 0.5rem;
     justify-content: space-between;
     align-items: center;
     margin-bottom: var(--card-body-margin);
