Add google site verification

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,7 +10,7 @@
     <meta name="generator" content="Hugo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+    <meta name="google-site-verification" content="wmpeWDMykpDSuqDXDp5rIHgybYitlCyx0JqqbV6Tbu0" />
     <meta name="description" content="{{ .Params.summary }}">
     <meta property="og:description" content="{{ .Params.summary }}">
     <meta property="og:title" content="{{ .Title }}" />
